--- a/app/src/main/res/layout/post_single.xml
+++ b/app/src/main/res/layout/post_single.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_single_post"
     android:layout_marginBottom="10dp"
-    >
+    android:background="@drawable/bg_single_post">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/post_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/post_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="horizontal"
-        android:layout_marginBottom="7dp"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <!--<androidx.cardview.widget.CardView
             android:id="@+id/reply_author_imgholder"
@@ -57,83 +53,78 @@
             android:id="@+id/post_author_imgholder"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:src="@drawable/img_default_profile"
-            app:civ_border_width="0dp"
-            app:civ_border_color="@color/lighter_gray"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/img_default_profile"
+            app:civ_border_color="@color/lighter_gray"
+            app:civ_border_width="0dp"
             app:layout_constraintEnd_toStartOf="@id/post_author_text"
-            app:layout_constraintTop_toTopOf="parent"
-        />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/post_author_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/post_options"
             app:layout_constraintStart_toEndOf="@+id/post_author_imgholder"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/post_author_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingHorizontal="3dp"
+                android:paddingVertical="2dp"
                 android:text=""
+                android:textAlignment="textStart"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:textAlignment="textStart"
-                android:paddingHorizontal="3dp"
-                android:paddingVertical="2dp"
                 app:layout_constraintBottom_toTopOf="@id/post_timestamp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/post_timestamp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/light_gray"
-                android:textSize="14sp"
-                android:textAlignment="textStart"
                 android:paddingHorizontal="3dp"
                 android:paddingVertical="2dp"
-                app:layout_constraintTop_toBottomOf="@id/post_author_name"
+                android:text=""
+                android:textAlignment="textStart"
+                android:textColor="@color/light_gray"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintTop_toBottomOf="@id/post_author_name" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
             android:id="@+id/post_options"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginHorizontal="5dp"
             android:layout_marginVertical="1dp"
+            android:background="@drawable/bg_options"
+            android:gravity="center"
             android:text="@string/horizontal_ellipsize"
+            android:textAlignment="center"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@color/dark_gray"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textColor="@color/dark_gray"
-            android:background="@drawable/bg_options"
-            android:textAppearance="?android:textAppearanceLarge"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/post_author_text"
-            app:layout_constraintTop_toTopOf="parent"
-            style="?android:attr/borderlessButtonStyle"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -141,92 +132,88 @@
         android:id="@+id/post_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textAlignment="textStart"
-        android:textIsSelectable="true"
         android:paddingHorizontal="10dp"
         android:paddingVertical="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/post_header"
+        android:text=""
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        android:textIsSelectable="true"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/post_body"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/post_body"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/post_header" />
 
     <TextView
         android:id="@+id/post_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textAlignment="textStart"
         android:autoLink="all"
-        android:textIsSelectable="true"
-        android:maxLines="4"
         android:ellipsize="end"
+        android:maxLines="4"
         android:paddingHorizontal="10dp"
         android:paddingVertical="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/post_title"
+        android:text=""
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        android:textIsSelectable="true"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/post_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/post_img"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/post_title" />
 
     <ImageView
         android:id="@+id/post_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxHeight="500dp"
-        android:paddingVertical="5dp"
-        android:paddingHorizontal="10dp"
-        android:visibility="gone"
         android:adjustViewBounds="true"
+        android:maxHeight="300dp"
+        app:layout_constraintHeight_max="300dp"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="5dp"
         android:scaleType="fitCenter"
-        app:layout_constraintTop_toBottomOf="@+id/post_body"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/post_replies_count"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/post_replies_count"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/post_body" />
 
     <TextView
         android:id="@+id/post_replies_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/light_gray"
-        android:textSize="14sp"
-        android:textAlignment="textEnd"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/bg_lightest_gray"
-        app:layout_constraintTop_toBottomOf="@+id/post_img"
+        android:paddingHorizontal="10dp"
+        android:paddingVertical="5dp"
+        android:text=""
+        android:textAlignment="textEnd"
+        android:textColor="@color/light_gray"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/post_view_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/post_view_btn"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/post_img" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/post_view_btn"
+        style="@style/grayButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_button_gray"
-        style="@style/grayButton"
-        android:text="View Question"
-        android:textAllCaps="true"
-        android:paddingHorizontal="5dp"
-        android:paddingVertical="5dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/post_replies_count"
+        android:background="@drawable/bg_button_gray"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="5dp"
+        android:text="View Question"
+        android:textAllCaps="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/post_replies_count" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
