--- a/app/src/main/res/layout/content_translation.xml
+++ b/app/src/main/res/layout/content_translation.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="5dp"
-        android:text="See translation"
+        android:text="Show translation"
         android:textColor="@color/dark_gray"
         android:textAlignment="textStart"
         android:textSize="13sp"
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="gone"
+        android:layout_marginBottom="10dp"
         >
 
         <LinearLayout
