--- a/app/src/main/res/layout/reply_single.xml
+++ b/app/src/main/res/layout/reply_single.xml
@@ -107,14 +107,31 @@
                 android:textSize="16sp"
                 android:textAlignment="textStart"
                 android:autoLink="all"
+                android:textColorLink="@color/purple_3"
                 android:textIsSelectable="true"
                 android:paddingHorizontal="5dp"
                 android:paddingVertical="2dp"
                 app:layout_constraintTop_toBottomOf="@id/reply_author_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/reply_body_translated"
                 />
+
+            <LinearLayout
+                android:id="@+id/reply_body_translated"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="5dp"
+                android:paddingVertical="2dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/post_body" >
+
+                <include layout="@layout/content_translation" />
+
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
