--- a/app/src/main/res/layout/reply_single.xml
+++ b/app/src/main/res/layout/reply_single.xml
@@ -124,14 +124,31 @@
                 android:paddingHorizontal="5dp"
                 android:paddingVertical="2dp"
                 android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/reply_img"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/post_body" >
+                app:layout_constraintTop_toBottomOf="@+id/reply_body" >
 
                 <include layout="@layout/content_translation" />
 
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/reply_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="5dp"
+                android:paddingVertical="2dp"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:maxHeight="200dp"
+                android:visibility="gone"
+                app:layout_constraintHeight_max="200dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/reply_body_translated"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
