--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="grayButton" parent="Widget.AppCompat.Button.Small">
         <item name="android:textColor">@color/light_gray</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textAlignment">center</item>
     </style>
+
     <style name="Theme.AppCompat.Light.NoActionBar.FullScreen" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+
     <style name="AlertDialog" parent="Theme.AppCompat.Light.Dialog">
-<!--        <item name="android:textColor">#000000</item>-->
+        <!--        <item name="android:textColor">#000000</item>-->
         <item name="android:textColorPrimary">#595959</item>
         <item name="android:colorAccent">@color/design_default_color_primary</item>
     </style>
+
     <style name="ProgressDialog" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:textColor">#000000</item>
         <item name="android:textColorPrimary">#595959</item>
         <item name="android:colorAccent">@color/design_default_color_primary</item>
     </style>
+
     <style name="ProgressDialogSpinnerOnly" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowBackground">@android:color/transparent</item>
@@ -34,6 +39,7 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:colorAccent">@color/design_default_color_primary</item>
     </style>
+
     <style name="LoginButton" parent="@android:style/Widget.Button">
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:textColor">@color/textcolor_button_post</item>
@@ -47,6 +53,18 @@
         <item name="android:background">@drawable/bg_button_post</item>
         <item name="android:focusable">true</item>
         <item name="android:clickable">true</item>
+    </style>
+
+    <style name="TransparentProgressDialog" parent="android:Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowTitleStyle">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
 </resources>
