--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -243,14 +243,35 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/top_content">
 
-                <ImageView
-                    android:id="@+id/add_reply_image"
+                <RelativeLayout
+                    android:id="@+id/rl_add_reply_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_gravity="top"
-                    android:layout_marginBottom="5dp"
-                    android:scaleType="fitCenter"
-                    android:visibility="gone" />
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:id="@+id/add_reply_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="top"
+                        android:layout_marginBottom="5dp"
+                        android:scaleType="fitCenter" />
+
+                    <ImageView
+                        android:id="@+id/add_reply_image_close"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:background="@drawable/bg_close_button"
+                        android:clickable="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/icon_close"
+                        app:tint="@color/white" />
+
+                </RelativeLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
