--- a/app/src/main/res/menu/actionbar_menu.xml
+++ b/app/src/main/res/menu/actionbar_menu.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_refresh_24"
+        android:title="@string/help"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_help"
         android:icon="@drawable/ic_help_outline_24"
-        android:title="@string/help"
+        android:title="@string/refresh"
         app:showAsAction="always" />
 </menu>
